dashboard/traefik-dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress
  namespace: kube-system
spec:
  ingressClassName: "traefik"
  tls:
  - hosts:
    - traefik.infra.zhou119.com
    secretName: traefik-tls
  rules:
    - host: traefik.infra.zhou119.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik-dashboard
                port:
                  number: 9000
