dashboard/traefik-dashboard-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
  name: dashboard
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`traefik.infra.zhou119.com`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
    services:
    - kind: TraefikService
      name: api@internal
